--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
         </div>
     </section>
 
-    <section class="container-fluid wrapper">
-
+    <section class="container-fluid">
+        <div class="wrapper">
             <h2>Our internationally acclaimed best-sellers</h2>
 
             <div class="row justify-content-around">
@@ -125,7 +125,7 @@
             </div>
 
             <button class="button" type="button">SEE MORE</button>
-
+        </div>
     </section>
 
     <section class="conttainer-fluid attached-img">
