Message (commit on 'master')

--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
     <div class="container-fluid">
         <section class="multi-section">
             <div class="row no-gutters">
-                <div class="col-sm-6">
+                <div class="col-md-12 col-lg-6">
                     <div class="left">
                         <div class="only-item">
                             <img src="img/pic09" alt="">
@@ -232,7 +232,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-6">
+                <div class="col-md-12 mt-md-5 mt-lg-0 col-lg-6">
                     <div class="row">
                         <div class="right">
                             <div class="col-12">
