--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img class="d-block w-100" src="img/img1.jpg" alt="First slide">
-                <div class="carousel-caption d-none d-md-block">
+                <img class="d-block w-100" src="img/image1.jpg" alt="First slide">
+                <div class="carousel-caption d-md-block">
                     <hgroup>
                         <h1>Goodbye hassle, hellow smooth travels</h1>
                         <h5>Luggage for bussines & pleasure</h5>
@@ -51,8 +51,8 @@
                   </div>
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="img/img3.jpg" alt="Third slide">
-                <div class="carousel-caption d-none d-md-block">
+                <img class="d-block w-100" src="img/image3.jpg" alt="Third slide">
+                <div class="carousel-caption d-md-block">
                     <hgroup>
                         <h1>Always travel for pleasure</h1>
                         <h5>By frequen flyers, for friquent flyers</h5>
@@ -88,14 +88,14 @@
                 
                     <div class="col-sm-4">
                         <a id="image" href="#">
-                            <img id="image-1" src="img/pic01.jpg">
+                            <img id="image-1" src="img/pic1.jpg">
                             <p>F38 Carry-On Luggage</p>
                             <p>$795.00 <del>@895.00</del></p>
                         </a>
                     </div>
                     <div class="col-sm-4">
                         <a id="image" href="#">
-                            <img id="image-2" src="img/pic02.jpg">
+                            <img id="image-2" src="img/pic2.jpg">
                             <p>C38 Carry-On Luggage</p>
                             <p>$545.00</p>
                             <p class="ratings">
@@ -109,7 +109,7 @@
                     </div>
                     <div class="col-sm-4">
                         <a id="image" href="#">
-                            <img id="image-3" src="img/pic03.jpg">
+                            <img id="image-3" src="img/pic3.jpg">
                             <p>F38 Carry-On Luggage</p>
                             <p>$545.00</p>
                             <p class="ratings">
@@ -132,19 +132,19 @@
         <div class="row justify-content-start no-gutters">
             <div class="col-sm-4">
                 <a href="#" class="attachedimage">
-                    <img src="img/pic04.jpg" alt="">
+                    <img src="img/pic4.jpg" alt="">
                     <p><u>ZERO CREASE</u></p>
                 </a>
             </div>
             <div class="col-sm-4">
                 <a href="#" class="attachedimage text-center">
-                    <img src="img/pic06.jpg" alt="">
+                    <img src="img/pic6.jpg" alt="">
                     <p><u>INTERLINK</u></p>
                 </a>
             </div>
             <div class="col-sm-4">
                 <a href="#" class="attachedimage text-center">
-                    <img src="img/pic05.jpg" alt="">
+                    <img src="img/pic5.jpg" alt="">
                     <p><u>FAST PASS</u></p>
                 </a>
             </div>
@@ -163,10 +163,10 @@
                         </ol>
                         <div class="carousel-inner">
                           <div class="carousel-item active">
-                            <img class="d-block w-100" src="img/pic07.jpg" alt="First slide">
+                            <img class="d-block w-100" src="img/pic7.jpg" alt="First slide">
                           </div>
                           <div class="carousel-item">
-                            <img class="d-block w-100" src="img/pic08.jpg" alt="Second slide">
+                            <img class="d-block w-100" src="img/pic8.jpg" alt="Second slide">
                           </div>
                         </div>
                         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
