--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="nav-close d-none" data-toggle="collapse">
                 <span class="fa fa-close text-white"></span>
             </div>
-            <ul>
+            <ul class="pl-md-5 pl-lg-4">
                 <li><a href="#">Products</a></li>
                 <li><a href="#">Journal</a></li>
                 <li><a href="#">How it works</a></li>
@@ -30,7 +30,7 @@
 
         <h2>ALCHEMY</h2>
 
-        <div class="buttons">
+        <div class="buttons pr-2 pr-lg-4">
             <a href="#"><span class="fa fa-user d-none d-sm-inline-block"></span></a>
             <a href="#"><span class="fa fa-search"></span></a>
             <a href="#"><span class="fa fa-shopping-bag"></span></a>
